@@ -7,6 +7,12 @@
    strings.
    Capitalize main window title.
    Add ui_widget_modify_font_from_string().
+ * src/build.c, src/keybindings.c, src/msgwindow.c, src/msgwindow.h,
+   src/vte.c, src/main.c:
+   Add 'Hide Message Window' popup menu item for each window in the
+   message window area.
+   Add msgwin_menu_add_common_items().
+   Move remaining message window setup code to msgwin_init().
 
 
 2006-12-12  Enrico Tröger  <enrico.troeger@uvena.de>
